combine core nightly version