@@ -1,18 +1,19 @@
 #!/bin/bash
 
-case "`uname`" in
+case "$(uname)" in
     CYGWIN*)
-        CFILE = `cygpath "$0"`
-        RESOLVED_NAME=`readlink -f "$CFILE"`
+        IS_CYGWIN="true"
+        CFILE="$(cygpath "$0")"
+        RESOLVED_NAME="$(readlink -f "$CFILE")"
         ;;
     Darwin*)
-        RESOLVED_NAME=`readlink "$0"`
+        RESOLVED_NAME="$(readlink "$0")"
         ;;
     FreeBSD)
-        RESOLVED_NAME=`readlink -f "$0"`
+        RESOLVED_NAME="$(readlink -f "$0")"
         ;;
     Linux)
-        RESOLVED_NAME=`readlink -f "$0"`
+        RESOLVED_NAME="$(readlink -f "$0")"
         ;;
 esac
 
@@ -21,9 +22,21 @@ if [ "x$RESOLVED_NAME" = "x" ]; then
 fi
 
 GREP="grep"
-DIRNAME=`dirname "$RESOLVED_NAME"`
+DIRNAME="$(dirname "$RESOLVED_NAME")"
 
-SERVER_OPTS="-Dkc.home.dir='$DIRNAME'/../ -Djboss.server.config.dir='$DIRNAME'/../conf -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dquarkus-log-max-startup-records=10000"
+abs_path () {
+  if [ -z $IS_CYGWIN ] ; then
+    echo "$DIRNAME/$1"
+  else
+    cygpath -w "$DIRNAME/$1"
+  fi
+}
+
+SERVER_OPTS="-Dkc.home.dir='$(abs_path '..')'"
+SERVER_OPTS="$SERVER_OPTS -Djboss.server.config.dir='$(abs_path '../conf')'"
+SERVER_OPTS="$SERVER_OPTS -Djava.util.logging.manager=org.jboss.logmanager.LogManager"
+SERVER_OPTS="$SERVER_OPTS -Dquarkus-log-max-startup-records=10000"
+CLASSPATH_OPTS="'$(abs_path "../lib/quarkus-run.jar")'"
 
 DEBUG_MODE="${DEBUG:-false}"
 DEBUG_PORT="${DEBUG_PORT:-8787}"
@@ -77,6 +90,14 @@ else
    echo "JAVA_OPTS already set in environment; overriding default settings with values: $JAVA_OPTS"
 fi
 
+# See also https://github.com/wildfly/wildfly-core/blob/7e5624cf92ebe4b64a4793a8c0b2a340c0d6d363/core-feature-pack/common/src/main/resources/content/bin/common.sh#L57-L60
+if [ "x$JAVA_ADD_OPENS" = "x" ]; then
+   JAVA_ADD_OPENS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED"
+else
+   echo "JAVA_ADD_OPENS already set in environment; overriding default settings with values: $JAVA_ADD_OPENS"
+fi
+JAVA_OPTS="$JAVA_OPTS $JAVA_ADD_OPENS"
+
 if [ "x$JAVA_OPTS_APPEND" != "x" ]; then
   echo "Appending additional Java properties to JAVA_OPTS: $JAVA_OPTS_APPEND"
   JAVA_OPTS="$JAVA_OPTS $JAVA_OPTS_APPEND"
@@ -84,7 +105,7 @@ fi
 
 # Set debug settings if not already set
 if [ "$DEBUG_MODE" = "true" ]; then
-    DEBUG_OPT=`echo $JAVA_OPTS | $GREP "\-agentlib:jdwp"`
+    DEBUG_OPT="$(echo "$JAVA_OPTS" | $GREP "\-agentlib:jdwp")"
     if [ "x$DEBUG_OPT" = "x" ]; then
         JAVA_OPTS="$JAVA_OPTS -agentlib:jdwp=transport=dt_socket,address=$DEBUG_PORT,server=y,suspend=$DEBUG_SUSPEND"
     else
@@ -92,12 +113,15 @@ if [ "$DEBUG_MODE" = "true" ]; then
     fi
 fi
 
-CLASSPATH_OPTS="'$DIRNAME'/../lib/quarkus-run.jar"
-
 JAVA_RUN_OPTS="$JAVA_OPTS $SERVER_OPTS -cp $CLASSPATH_OPTS io.quarkus.bootstrap.runner.QuarkusEntryPoint ${CONFIG_ARGS#?}"
 
+if [ "$PRINT_ENV" = "true" ]; then
+  echo "Using JAVA_OPTS: $JAVA_OPTS"
+  echo "Using JAVA_RUN_OPTS: $JAVA_RUN_OPTS"
+fi
+
 if [[ (! $CONFIG_ARGS = *"--optimized"*) ]] && [[ ! "$CONFIG_ARGS" == " build"* ]] && [[ ! "$CONFIG_ARGS" == *"-h" ]] && [[ ! "$CONFIG_ARGS" == *"--help"* ]]; then
-    eval "$JAVA" -Dkc.config.build-and-exit=true $JAVA_RUN_OPTS
+    eval "'$JAVA'" -Dkc.config.build-and-exit=true $JAVA_RUN_OPTS
     EXIT_CODE=$?
     JAVA_RUN_OPTS="-Dkc.config.built=true $JAVA_RUN_OPTS"
     if [ $EXIT_CODE != 0 ]; then
@@ -105,4 +129,4 @@ if [[ (! $CONFIG_ARGS = *"--optimized"*) ]] && [[ ! "$CONFIG_ARGS" == " build"* 
     fi
 fi
 
-eval exec "${JAVA}" ${JAVA_RUN_OPTS}
+eval exec "'$JAVA'" $JAVA_RUN_OPTS
